fixed alignment of error message on new user, create project, create task

--- a/app/assets/stylesheets/application.css.scss
+++ b/app/assets/stylesheets/application.css.scss
@@ -2,7 +2,7 @@
 @import "bootstrap";
 
 .gschool-main {
-  padding-top: 80px;
+  padding-top: 60px;
 }
 
 .pics {
@@ -40,5 +40,5 @@ footer {
 }
 
 .my-class-no-left-pad {
-  padding-left: 0px;  
+  padding-left: 0px;
 }
